more tweaks and vanjs experiments

--- a/examples/AsyncBufferBasic/html/index.html
+++ b/examples/AsyncBufferBasic/html/index.html
@@ -8,8 +8,8 @@
   <script src="js/vanjs.js"></script> <!-- amazing and compact UI Framework -->
   <script src="js/app.js"></script>
   <link rel="icon" type="image/x-icon" href="img/favicon.png">
-  <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="apple-touch-icon" href="img/favicon.png">
+  <!-- <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="apple-touch-icon" href="img/favicon.png"> -->
 
   <!-- 
   Use base tag for local development update the ip to your ESP32
